--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1582,7 +1582,7 @@
 	input, textarea, select {
 		font-size: 15pt;
 		line-height: 1.85em;
-		font-family: sans-serif;
+		font-family: 'TheSerif', sans-serif;
 		font-weight: 300;
 	}
 
